<resources>
    <string name="app_name">Magic The Gathering Life Counter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_league_table">league Table</string>
    <string name="title_activity_set_up_game">Set Up Game</string>
    <string name="leagueTableButtonText">League Table</string>
    <string name="setUpGameButtonText">Play Game</string>
    <string name="addNewPlayerToLeagueButtonText">Add New Player To League</string>
    <string name="addNewPlayerTextBox">Type Players Name Here</string>
    <string name="leagueTableLabel">LEAGUE TABLE</string>
    <string name="leagueTable">League Table</string>
    <string name="title_activity_track_life_totals">Track Life Totals</string>
    <string name="choosePlayerTextLabel">Click on Players to keep track of their Life Totals. Then Press Button To Start</string>
    <string name="trackLifeTotalsButtonText">Click To Track Life Totals</string>
    <string name="looseLifeButtonText">- LOSE LIFE</string>
    <string name="addLifeButtonText">+ ADD LIFE</string>
    <string name="lifeValueInputText">00</string>
    <string name="playerSelectedText">Selected Player</string>
    <string name="light">White</string>
    <string name="dark">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="thisNum">00</string>
    <string name="sortAlpha">Sort Alphabetically</string>
    <string name="sortByPoints">Sort By Points</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
