<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="barry.magicthegatheringlifecounter.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/leagueTableButton"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/leagueTableButtonText"
        app:layout_constraintBottom_toTopOf="@+id/setUpGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <Button
        android:id="@+id/setUpGameButton"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/setUpGameButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setUpGameButton">

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="onRadioButtonClicked"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="onRadioButtonClicked"
            android:text="@string/dark" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
