<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="barry.magicthegatheringlifecounter.trackLifeTotals"
    tools:showIn="@layout/activity_track_life_totals">

    <EditText
        android:id="@+id/lifeValueInput"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:ems="10"
        android:inputType="number"
        android:text="@string/lifeValueInputText"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addLifeButton"
        app:layout_constraintStart_toEndOf="@+id/looseLifeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/looseLifeButton"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/red"
        android:text="@string/looseLifeButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lifeValueInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/addLifeButton"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/green"
        android:text="@string/addLifeButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lifeValueInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/playerSelected"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/playerSelectedText"
        android:background="@color/grey"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/lifeValueInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />


</android.support.constraint.ConstraintLayout>
